# qwiic_test

./: CMakeLists.txt
src/: blink.c  qwiic_led_stick.c  qwiic_led_stick.h
